--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "npx nodemon index.js"
+    "dev": "node index.js"
+   
   },
   "keywords": [],
   "author": "Achyuth Reddy",
@@ -25,3 +25,5 @@
     "nodemon": "^3.1.9"
   }
 }
+
+
