--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
-  "scripts": {
-    "dev": "node index.js"
-   
+   "scripts": {
+   "start": "node index.js",
+   "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "Achyuth Reddy",
